5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4343/executions/1595_1446.log
== SUBMITION (2019-03-26 17:08:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var=float(input("quantos litros foram comprados?")
doar=(var*2/3)
ficar= var-doar
total=(round(ficar,3))
print(total)
-- EXECUTION TIME:
0.159182
-- ERROR:
  File "/home/codebench/codes/1595/1446/main.py", line 5
    doar=(var*2/3)
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:09:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var =float(input("quantos litros foram comprados?")
doar = (var*2/3)
ficar = var - doar
total =(round(ficar,3))
print(total)
-- EXECUTION TIME:
0.13734
-- ERROR:
  File "/home/codebench/codes/1595/1446/main.py", line 5
    doar = (var*2/3)
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:09:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var =float(input("quantos litros foram comprados?"))
doar = (var*2/3)
ficar = var - doar
total =(round(ficar,3))
print(total)
-- EXECUTION TIME:
0.177829
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
